# package-comparison

./: README.md  pyproject.toml  requirements.txt
package_comparison/: main.py
