[tool.poetry]
name = "package-comparison"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{ include = "package_comparison" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"
version-utils = "^0.3.2"
simple-term-menu = "^1.6.4"
tabulate = { extras = ["widechars"], version = "^0.9.0" }
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
basalt-start = 'package_comparison.main:main'
